# bugtracker

./: db.sqlite3  pyproject.toml  requirements.txt
bugtracker/: settings.py  urls.py
static/css/: bugtracker.css
templates/: employee_detail.html  employee_edit_restricted.html  generic_form.html  index.html  navbar.html  ticket_detail.html  ticket_list.html
tickets/: forms.py  models.py
tickets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ticket_status.py  0004_ticket_completed_before.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py  0002_employee_avatar.py  0003_alter_employee_avatar.py
website/: views.py
